...
        switchToNextQuestion()
        questionFactory?.requestNextQuestion()
    }
    
    private func createQuizResultAlert(resultMessage: String) -> AlertModel {
        return AlertModel(
            title: "Этот раунд окончен!",
            message: resultMessage,
            buttonText: "Сыграть еще раз",
            completion: restartGame
        )
    }
}
...
